# TwinSeal

./: .env.example  .gitignore  README.md  dockerfile  pyproject.toml  twinseal.db
app/: config.py  main.py
app/api/v1/: dependencies.py  routes_file.py  routes_pairing.py  routes_user.py
app/core/: encryption.py  logger.py  security.py  utils.py
app/crud/: activity.py  file.py  pairing.py  user.py
app/db/: session.py
app/models/: activity.py  file.py  pairing.py  user.py
app/schemas/: activity.py  file.py  user.py
app/tasks/: cleanup.py
migrations/: env.py
migrations/versions/: 680f275cc1e6_initial_schema.py
scripts/: generate_keys.py  init_db.py
