[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinseal"
version = "0.1.0"
description = "Secure file sharing platform with user pairing"
authors = [
    { name="Sapna Singh Khatik", email="sapnasinghkhatik@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI"
]

dependencies = [
    "fastapi>=0.103",
    "uvicorn[standard]>=0.23",
    "python-multipart>=0.0.6",
    "email-validator>=2.1",
    "passlib[bcrypt]>=1.7",
    "pydantic>=2.5",
    "httpx>=0.24",
    "cryptography>=45.0.7",
    "sqlalchemy>=2.0",
    "databases[sqlite]>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "black>=25.1.0",
    "isort>=6.0",
    "mypy>=1.5"
]
